[tool.poetry]
name = "pycaprio"
version = "0.2.2"
description = "Python client for the INCEpTION annotation tool API"
authors = ["Javier Luna Molina", "Savanamed"]
license = "MIT"
packages = [
    { include = "pycaprio" },
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "*"
requests-toolbelt = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-mock = "*"
requests-mock = "*"
flake8 = "*"
black = { version = "*", allows-prereleases = true }
coverage = "*"
mkdocs = "^1.0"
pytest-cov = "^2.7"
bump2version = "^0.5.11"

[tool.poetry.group.dev.dependencies]
Jinja2 = "3.0.0"

[tool.black]
line-length = 120
target_version = ['py36']

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
