[tool.poetry]
name = "pycaprio"
version = "0.4.0-dev"
readme = "README.md"
# homepage = "https://github.com/inception-project/pycaprio"
repository = "https://github.com/inception-project/pycaprio"
documentation = "https://pycaprio.readthedocs.io"
description = "Python client for the INCEpTION annotation tool remote API"
authors = ["The INCEpTION Project", "Javier Luna Molina", "Savanamed"]
maintainers = [ "Richard Eckart de Castilho" ]
license = "MIT"
packages = [
    { include = "pycaprio" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "*"
requests-toolbelt = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
pytest-mock = "*"
requests-mock = "*"
flake8 = "*"
black = { version = "*", allow-prereleases = true }
coverage = "*"
mkdocs = "^1.0"
pytest-cov = "^3.0"
codecov = "^2.1"
bump2version = "^0.5.11"

[tool.poetry.group.dev.dependencies]
Jinja2 = "^3.1.3"

[tool.black]
line-length = 120
target_version = ['py38']

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
